--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-tree",
+  "name": "ng2-tree-dept",
   "version": "0.0.2-7",
   "description": "angular2 component for visualizing data that can be naturally represented as a tree",
   "main": "index.js",
@@ -8,13 +8,13 @@
     "name": "Georgii Rychko",
     "email": "rychko.georgiy@gmail.com"
   },
-  "homepage": "https://github.com/valor-software/ng2-tree",
+  "homepage": "https://github.com/sintak/ng2-tree",
   "repository": {
     "type": "git",
     "url": "git@github.com:valor-software/ng2-tree.git"
   },
   "bugs": {
-    "url": "https://github.com/valor-software/ng2-tree/issues"
+    "url": "https://github.com/sintak/ng2-tree/issues"
   },
   "keywords": [
     "tree",
